Using linexpr to change domain

--- a/interp/CMakeLists.txt
+++ b/interp/CMakeLists.txt
@@ -9,4 +9,4 @@ set_target_properties(VerifierPass PROPERTIES
     COMPILE_FLAGS "-fno-rtti -fpermissive -g"
 )
 
-target_link_libraries(VerifierPass -lapron -lbox -litv -lgmp -lapron_debug -lboxMPQ_debug)
+target_link_libraries(VerifierPass -lapron -lbox -litv -lgmp -lapron_debug -lboxMPQ_debug -lgmp -lmpfr)
