--- a/interp/CMakeLists.txt
+++ b/interp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_llvm_loadable_module( VerifierPass MODULE main.cpp domain.cpp)
+add_llvm_loadable_module( VerifierPass MODULE main.cpp domain.cpp z3_handler.cpp)
 
 # Use C++11 to compile our pass (i.e., supply -std=c++11).
 target_compile_features(VerifierPass PRIVATE cxx_range_for cxx_auto_type)
@@ -9,4 +9,4 @@ set_target_properties(VerifierPass PROPERTIES
     COMPILE_FLAGS "-fno-rtti -fpermissive -g"
 )
 
-target_link_libraries(VerifierPass -lapron -lbox -litv -lgmp -lapron_debug -lboxMPQ_debug -lgmp -lmpfr)
+target_link_libraries(VerifierPass -lapron -lbox -litv -lgmp -lapron_debug -lboxMPQ_debug -lgmp -lmpfr -lz3)
